2004-11-09  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390-protos.h (s390_pool_operand): Remove.
	* config/s390/s390.c (s390_pool_operand): Likewise.
	(s390_extra_constraint_str): Handle 'B' constraints.
	* config/s390/s390.h (CONSTRAINT_LEN): Handle 'B' constraints.
	* config/s390/s390.md: Document 'B' constraints.
	("*cmpdi_cct", "*cmpsi_cct"): Use 'B' constraint instead of
	s390_pool_operand to prevent insns with two literal pool
	references.  Make pattern commutative.
	("*cmpdi_ccu", "*cmpsi_ccu", "*cmphi_ccu", "*cmpqi_ccu"): Use
	'B' constraint instead of s390_pool_operand.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-cfg.c (create_bb): Remove unnecessary memset.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-ssa-threadupdate.c (copy_phis_to_block): Remove.
	(thread_block): Call flush_pending_stmt instead of
	copy_phis_to_block.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* loop-iv.c (iv_number_of_iterations): Make it static.
	* cfgloop.h: Remove the corresponding prototype.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* function.c (combine_temp_slots, assign_parms,
	expand_pending_sizes): Make them static.
	* tree.h: Remove the corresponding prototypes.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* emit-rtl.c (copy_most_rtx): Remove.
	* rtl.h: Remove the corresponding prototype.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* cfgloop.c (flow_loops_update): Remove.
	* cfgloop.h: Remove the corresponding prototype.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* conflict.c (mark_reg, conflict_graph_compute): Remove.
	* basic-block.h: Remove the prototype for
	conflict_graph_compute.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-if-conv.c (add_to_dst_predicate_list): Change the
	second argument to basic_block.
	(tree_if_convert_cond_expr): Update call sites.

2004-11-09  Kazu Hirata  <kazu@cs.umass.edu>

	* fold-const.c (pedantic_non_lvalue): Make it static.
	* tree.h: Remove the corresponding prototype.
