@@ -1,3 +1,9 @@
+2004-11-09  Joseph S. Myers  <joseph@codesourcery.com>
+
+	PR c/18322
+	* gcc.dg/func-outside-1.c, gcc.dg/func-outside-2.c: Correct
+	expected diagnostic location.
+
 2004-11-09  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* gcc.dg/20041109-1.c: New test.
